{
  "version": 4,
  "terraform_version": "0.12.19",
  "serial": 39,
  "lineage": "90deb4fd-2d57-2f6c-6cf7-00d2b2a48e05",
  "resources": [
    {
      "module": "module.db",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "firewall-mongo",
      "provider": "module.db.provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "27017"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-02-05T05:32:46.793-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "id": "allow-mongo-default",
            "name": "allow-mongo-default",
            "network": "https://www.googleapis.com/compute/v1/projects/infra-986808/global/networks/default",
            "priority": 1000,
            "project": "infra-986808",
            "self_link": "https://www.googleapis.com/compute/v1/projects/infra-986808/global/firewalls/allow-mongo-default",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "reddit-db"
            ],
            "timeouts": null
          }
        }
      ]
    },
    {
      "module": "module.app",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "firewall-puma",
      "provider": "module.app.provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "9292"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-02-05T05:32:47.010-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "id": "allow-puma-default",
            "name": "allow-puma-default",
            "network": "https://www.googleapis.com/compute/v1/projects/infra-986808/global/networks/default",
            "priority": 1000,
            "project": "infra-986808",
            "self_link": "https://www.googleapis.com/compute/v1/projects/infra-986808/global/firewalls/allow-puma-default",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "reddit-app"
            ],
            "timeouts": null
          }
        }
      ]
    },
    {
      "module": "module.app",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "firewall_http",
      "provider": "module.app.provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-02-05T21:54:12.009-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "id": "allow-http-default",
            "name": "allow-http-default",
            "network": "https://www.googleapis.com/compute/v1/projects/infra-986808/global/networks/default",
            "priority": 1000,
            "project": "infra-986808",
            "self_link": "https://www.googleapis.com/compute/v1/projects/infra-986808/global/firewalls/allow-http-default",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "reddit-http"
            ],
            "timeouts": null
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "firewall_ssh",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-02-05T05:32:46.797-08:00",
            "deny": [],
            "description": "Allow SSH from anywhere (added from Terraform)",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "id": "default-allow-ssh",
            "name": "default-allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/infra-986808/global/networks/default",
            "priority": 1000,
            "project": "infra-986808",
            "self_link": "https://www.googleapis.com/compute/v1/projects/infra-986808/global/firewalls/default-allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          }
        }
      ]
    },
    {
      "module": "module.app",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "app",
      "provider": "module.app.provider.google",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/infra-986808/global/images/reddit-base-1578651793",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/infra-986808/zones/europe-west1-b/disks/reddit-app"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "deletion_protection": false,
            "id": "reddit-app",
            "instance_id": "8629277134538898704",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "g1-small",
            "metadata": {
              "ssh-keys": "ssh-rsa AAAAB3NzaC1yc2EAAAABIwAAAQEAz/rcMpufleSEpnDF+Mz66A7Y/S4osC+4L/FqQUc+laUmKhIg8DqUhDn7bzKTXXjfObL4eHGUcYJxGaLgwPQL/T3R1Yq+SfsLSmpr2OvBnk3Sw8Di8sA935t0bKL1P+aWfnJr3YrpNMdKduIQsLTWb3NFrYwZLvnScJL1EVSgqVREVdUti0KUfa+1YEgEZ9iM930jWUmwUmWg0fpubVqT/DHcSUdWXSaJFNyencFJxNG12CsnwjV0Y1qlV7ugoRjVPcWaTk/4XQqRFLeeb0bwvnLohv1T+J24KFNo3P7pTdc+KjJVhd3kSGUPZ3r33HPPVLDXeNd/nwHX0fNgWodlRQ== appuser\n"
            },
            "metadata_fingerprint": "vbLr9XFxzMM=",
            "name": "reddit-app",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.240.123.204",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/infra-986808/global/networks/default",
                "network_ip": "10.132.0.54",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/infra-986808/regions/europe-west1/subnetworks/default",
                "subnetwork_project": "infra-986808"
              }
            ],
            "project": "infra-986808",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/infra-986808/zones/europe-west1-b/instances/reddit-app",
            "tags": [
              "reddit-db"
            ],
            "tags_fingerprint": "NQyRUqL7UTU=",
            "zone": "europe-west1-b"
          }
        }
      ]
    },
    {
      "module": "module.db",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "db",
      "provider": "module.db.provider.google",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/infra-986808/global/images/reddit-base-1578651793",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/infra-986808/zones/europe-west1-b/disks/reddit-db"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "deletion_protection": false,
            "id": "reddit-db",
            "instance_id": "6742499500349685008",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "g1-small",
            "metadata": {
              "ssh-keys": "ssh-rsa AAAAB3NzaC1yc2EAAAABIwAAAQEAz/rcMpufleSEpnDF+Mz66A7Y/S4osC+4L/FqQUc+laUmKhIg8DqUhDn7bzKTXXjfObL4eHGUcYJxGaLgwPQL/T3R1Yq+SfsLSmpr2OvBnk3Sw8Di8sA935t0bKL1P+aWfnJr3YrpNMdKduIQsLTWb3NFrYwZLvnScJL1EVSgqVREVdUti0KUfa+1YEgEZ9iM930jWUmwUmWg0fpubVqT/DHcSUdWXSaJFNyencFJxNG12CsnwjV0Y1qlV7ugoRjVPcWaTk/4XQqRFLeeb0bwvnLohv1T+J24KFNo3P7pTdc+KjJVhd3kSGUPZ3r33HPPVLDXeNd/nwHX0fNgWodlRQ== appuser\n"
            },
            "metadata_fingerprint": "vbLr9XFxzMM=",
            "name": "reddit-db",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.240.30.77",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/infra-986808/global/networks/default",
                "network_ip": "10.132.0.53",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/infra-986808/regions/europe-west1/subnetworks/default",
                "subnetwork_project": "infra-986808"
              }
            ],
            "project": "infra-986808",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/infra-986808/zones/europe-west1-b/instances/reddit-db",
            "tags": [
              "reddit-db"
            ],
            "tags_fingerprint": "NQyRUqL7UTU=",
            "zone": "europe-west1-b"
          }
        }
      ]
    }
  ]
}